# stream_framework_example

./: .buildpacks  .dockerignore  .gitignore  .travis.yml  Dockerfile  Gemfile  LICENSE  Procfile  README.md  app.json  docker-compose.yml  pyproject.toml  requirements.txt
core/: feed_managers.py  forms.py  models.py  pin_feed.py  pin_feedly.py  settings.py  tests.py  verbs.py  views.py  wsgi.py
core/fixtures/: testdata.json
core/migrations/: 0003_auto__del_field_follow_deleted_at__add_field_follow_created_at.py
requirements/: base.txt  heroku.txt  testing.txt
templates/core/: _base.html
