[tool.poetry]
name = "stream-framework-example"
version = "0.0.1"
description = "An example project running Stream Framework"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "2.7"
stream-framework = "=1.3.2"
django-celery = "=3.1.17"
celery = "=3.1.15"
south = "=1.0.2"
django-compressor = "=1.4"
django = "=1.5.5"
Pillow = "=3.1.2"

[tool.poetry.dev-dependencies]
